force-app/main/default/objects/KimbleOne__CommercialDocumentTemplate__c/KimbleOne__CommercialDocumentTemplate__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__ConfigGuide</customHelpPage>
    <label>Commercial Document Template</label>
    <nameField>
        <label>Commercial Document Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commercial Document Templates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>