force-app/main/default/objects/KimbleOne__CommercialDocumentTemplate__c/fields/KimbleOne__DocumentType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DocumentType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The type of document that the template represents e.g. Credit Note, Invoice etc...</description>
    <label>Document Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>CommercialDocumentTemplateType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Commercial Document Templates</relationshipLabel>
    <relationshipName>CommercialDocumentTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>