force-app/main/default/objects/KimbleOne__CommercialDocumentTemplate__c/fields/KimbleOne__IsCustomTemplate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsCustomTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Custom Template</label>
    <type>Checkbox</type>
</CustomField>