force-app/main/default/objects/KimbleOne__CommercialDocumentTemplate__c/fields/KimbleOne__PageName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PageName__c</fullName>
    <description>The name of the page in the system that the template represents e.g. InvoicePrintT1, InvoicePrintT2. This field is limited to 40 characters because the page name cannot exceed 40 characters.</description>
    <label>Page Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>