force-app/main/default/objects/KimbleOne__CommercialDocumentTemplate__c/fields/KimbleOne__ShowFooter__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShowFooter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Footer</label>
    <type>Checkbox</type>
</CustomField>