force-app/main/default/objects/KimbleOne__CommercialDocumentTemplate__c/fields/KimbleOne__ShowInvoiceLineNumbers__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShowInvoiceLineNumbers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Invoice Line Numbers</label>
    <type>Checkbox</type>
</CustomField>