force-app/main/default/objects/KimbleOne__CommercialDocumentTemplate__c/fields/KimbleOne__ShowLogo__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShowLogo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Logo</label>
    <type>Checkbox</type>
</CustomField>