force-app/main/default/objects/KimbleOne__CommercialDocumentTemplate__c/fields/KimbleOne__ShowPageNumbers__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShowPageNumbers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Page Numbers</label>
    <type>Checkbox</type>
</CustomField>