force-app/main/default/objects/KimbleOne__CommercialDocumentTemplate__c/fields/KimbleOne__ToAddressStyle__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ToAddressStyle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>To Address Style</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>AddressStyle</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Commercial Document Templates (To Address Style)</relationshipLabel>
    <relationshipName>CommercialDocumentTemplatesToAddStyle</relationshipName>
    <type>Lookup</type>
</CustomField>